--- a/index.html
+++ b/index.html
@@ -1,24 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-</head>
-<body>
-    <div id="main">
-        <div id="page">
-            <canvas></canvas>
-        </div>
-        <div id="page1"></div>
-        <div id="page2"></div>
-        <div id="page3"></div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="script.js"></script>
-</body>
+<!DOCTYPE html> 
+<html lang="en"> 
+
+<head> 
+	<meta charset="UTF-8"> 
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+
+	<meta name="viewport" content= 
+		"width=device-width, initial-scale=1.0"> 
+
+	<link rel="stylesheet" href="style.css"> 
+</head> 
+
+<body> 
+	<div class="cube"> 
+
+		<!-- Creating 6 divs for each face of the cube -->
+
+		<div class="box box1"> 
+			<img src= 
+"https://static.vecteezy.com/system/resources/previews/013/859/023/non_2x/rubik-s-cube-illustration-on-white-background-free-vector.jpg"
+				alt="image 1"> 
+		</div> 
+
+		<div class="box box2"> 
+			<img src= 
+"https://static.vecteezy.com/system/resources/previews/013/859/023/non_2x/rubik-s-cube-illustration-on-white-background-free-vector.jpg"
+				alt="image 2"> 
+		</div> 
+
+		<div class="box box3"> 
+			<img src= 
+"https://static.vecteezy.com/system/resources/previews/013/859/023/non_2x/rubik-s-cube-illustration-on-white-background-free-vector.jpg"
+				alt="image 3"> 
+		</div> 
+
+		<div class="box box4"> 
+			<img src= 
+"https://static.vecteezy.com/system/resources/previews/013/859/023/non_2x/rubik-s-cube-illustration-on-white-background-free-vector.jpg"
+				alt="image 4"> 
+		</div> 
+
+		<div class="box box5"> 
+			<img src= 
+"https://static.vecteezy.com/system/resources/previews/013/859/023/non_2x/rubik-s-cube-illustration-on-white-background-free-vector.jpg"
+				alt="image 5"> 
+		</div> 
+
+		<div class="box box6"> 
+			<img src= 
+"https://static.vecteezy.com/system/resources/previews/013/859/023/non_2x/rubik-s-cube-illustration-on-white-background-free-vector.jpg"
+				alt="image 6"> 
+		</div> 
+	</div> 
+</body> 
+
 </html>
+
